# ralffet

./: CMakeLists.txt  README.md
docs/: ralffet.1
src/: args.c  args.h  cmd.c  cmd.h  embedded.c  embedded.h  main.c  util.h
